Fix (Application pages): Wrap the label overflow
- Fix the input upload position if the label is very long

Covers [RUNTIME-1434](https://bonitasoft.atlassian.net/browse/RUNTIME-1434)

--- a/main/styles/applications/import.less
+++ b/main/styles/applications/import.less
@@ -6,9 +6,6 @@
   margin-bottom: 20px;
 
   label {
-    position: absolute;
-    top: 0;
-    left: 0;
     min-width: 150px
   }
 
@@ -19,7 +16,6 @@
 .upload-field {
   position: relative;
   height: 37px;
-  top: 30px;
   padding: 0;
 
   & input {
